=== gdl 0.7.5 ===

2007-05-06  Naba Kumar  <naba@gnome.org>
	
	* configure.in: Fixes build failure. Bumped version.
	* NEWS: Updated

=== gdl 0.7.4 ===

2007-05-06  Naba Kumar  <naba@gnome.org>

	* configure.in: Bumped version to 0.7.4
	* NEWS: Updated

	Patch from Halton Huo:
	* gdl/gdl-dock.c: Fixed __FUNCTION__ macro for sun.

2007-04-04  Naba Kumar  <naba@gnome.org>

	* gdl/gdl-dock-master.c: (gdl_dock_master_class_init),
	(gdl_dock_master_instance_init), (gdl_dock_master_set_property),
	(gdl_dock_master_get_property), (gdl_dock_master_add),
	(set_switcher_style_foreach), (gdl_dock_master_set_switcher_style):
	Added a properly 'switcher-style' that sets the global switcher
	style for all notebook items.
	
	* gdl/gdl-switcher.c: (layout_buttons),
	(gdl_switcher_set_property), (gdl_switcher_get_property),
	(gdl_switcher_class_init), (gdl_switcher_instance_init),
	(gdl_switcher_add_button), (set_switcher_style_internal),
	(style_changed_notify), (gdl_switcher_set_style),
	(gdl_switcher_get_style), gdl/gdl-switcher.h: Renamed 'mode' to
	'style' and added a GDL_SWITCHER_STYLE_TABS. Set/get style as
	property.
	
	* gdl/test-dock.c: (on_style_button_toggled),
	(create_style_button), (create_styles_item), (main): Added
	switcher style test code.
	
	* gdl/gdl-dock-paned.c: (gdl_dock_paned_dock): Got proper pane
	resizing patch from screem's version of gdl (which was in turn
	taken from monodevelop).

2007-04-03  Naba Kumar  <naba@gnome.org>

	* configure.in: Added HAVE_GNOME config define.
	
	* gdl/gdl-dock-item.c: (gdl_dock_item_size_allocate): Do not
	allocate negative size to child.
	
	* (added) gdl/gdl-switcher.[ch], gdl/gdl.h, gdl/Makefile.am:
	Added a notebook like
	widget (derived from GtkNotebook) which has self organizing buttons
	instead of tabs. It can also become gtknotebook if show-tabs is
	enabled on it. Also the buttons can be configure to take icon-only,
	text-only, both or GNOME desktop setting for toolbars (default).
