@@ -6,7 +6,7 @@ idldir=@datadir@/idl/libgdl-1.0
 
 Name: gdl
 Description: Gnome DevTool Libraries
-Version: @VERSION@@GTK_ONLY@
-Requires: libbonoboui-2.0 libgnome-2.0 gtk+-2.0 libxml-2.0 libglade-2.0
+Version: @VERSION@
+Requires: gtk+-2.0 libxml-2.0 libglade-2.0
 Libs: -L${libdir} -lgdl-1
 Cflags: -I${includedir}
