@@ -1,3 +1,13 @@
+2007-05-07  Naba Kumar  <naba@gnome.org>
+
+	Patch from  Cygwin Ports maintainer  <yselkowitz@users.sourceforge.net>:
+
+	* configure.in: Add '-no-undefined' to EXTRA_LDFLAGS for all
+	platforms.
+	* gdl/Makefile.am: Link libgdl-gnome-1 against libgdl-1.
+	* gdl-1.0.pc.in:
+	* gdl-gnome-1.0.pc.in: Fixed dependencies.
+
 === gdl 0.7.5 ===
 
 2007-05-06  Naba Kumar  <naba@gnome.org>
